# ml-zoomcamp-midterm-project

./: Dockerfile  README.md  notebook.ipynb  predict.py  pyproject.toml  random_forest_model.pkl  svr_model.pkl  train.py
