[tool.poetry]
name = "ml-zoomcamp-midterm-project"
version = "0.1.0"
description = "Midterm project of the Machine Learning Zoomcamp 2024"
authors = ["Matheus Chaves <matheusfonsecachaves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
